Bug 43962 - header/footer and manual page break indicators fail to pop-up after print dialogue has been opened and closed
Summary: header/footer and manual page break indicators fail to pop-up after print dia...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta1
Hardware: Other All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-19 13:31 UTC by OfficeUser
Modified: 2011-12-21 13:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
hdft-edit.png (40.47 KB, image/png)
2011-12-19 13:31 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2011-12-19 13:31:21 UTC
Created attachment 54580 [details]
hdft-edit.png

LibreOffice 3.5 introduces a new feature: Leave the mouse over the area of a header or footer and it will show the header/footer indicators. See screen shot.


Bug:
- Open and close the print dialogue
- Leave the mouse over the area of a header or footer

Note: The indicators are not displayed are not anymore displayed!
Comment 1 OfficeUser 2011-12-19 13:33:17 UTC
Correction:

Note: The indicators are not anymore displayed!
Comment 2 OfficeUser 2011-12-19 13:35:47 UTC
Please note: The new indication of manual page breaks is also affected by this bug.