Header/Footer,Page Break: fix bad test for printing mode (fdo#43962)